# bevy-jam-7

./: Cargo.toml  justfile
.github/workflows/: release.yaml
art/: 001.blend
art/spawn-circle-001/: spawn-circle-001.psd
assets/001/: misc.gltf
assets/shaders/: crystal.wgsl  energy.wgsl  energy_well.wgsl  hammer_smack.wgsl  health.wgsl  health_vertex.wgsl  spawn_circle.wgsl  spawn_circle_column.wgsl
src/: animation_extension.rs  assets.rs  atmosphere.rs  awareness.rs  controls.rs  crystals.rs  debug_free_cam.rs  eyes.rs  flock_sphere.rs  hammer_smack.rs  health.rs  laser.rs  lib.rs  main.rs  navmesh.rs  player.rs  spawn_circle.rs
src/spawn_circle/: spawn_systems.rs
web/: index.html
