[package]
name = "bevy-jam-7"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    # 2d
    "2d_bevy_render",
    "default_app",
    "picking",
    "scene",

    # 3d
    "3d_bevy_render",

    # ui
    "ui_api",
    "ui_bevy_render",

    # default_platform
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "wayland",
    "webgpu",
] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_enhanced_input = "0.23.2"
bevy_seedling = "0.7.0"
noiz = "0.4.0"
bevy_skein = { git = "https://github.com/rust-adventure/skein", branch = "handle-image-support" }
# Compile out low-severity logs to improve performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
rand = { version = "0.9" }

tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_blockout = "0.4"
bevy_shader_utils = "0.10.0"
bevy_rand = { version = "0.14.0", features = ["wyrand"] }
rand_core = "0.10.0"
bevy_asset_loader = { version = "0.25.0", features = ["progress_tracking"] }
iyes_progress = "0.16.0"
vleue_navigator = "0.15.0"
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.14", features = ["wasm_js"] }

[patch.'crates-io']
geo = { git = "https://github.com/georust/geo", branch = "main" }
geo-types = { git = "https://github.com/georust/geo", branch = "main" }

[features]
# Default to a native dev build.
default = ["dev_native"]
inspector_egui = ["dep:bevy-inspector-egui"]
free_camera = ["bevy/free_camera"]
webgl2 = []
dev = [
    # "free_camera",
    "inspector_egui",
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]


[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]


[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"


# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
